feat: Finaliza refatoração e restaura Tailwind CDN

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
       gtag('config', 'AW-1001326878');
       gtag('config', 'G-2V46X0HB2M');
     </script>
-    <!-- End Google Ads Tag -->
-
-    <!-- Alpine JS -->
+    <!-- End Google Ads Tag -->    <!-- Alpine JS -->
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
     <!-- Tailwind CSS -->
