refactor: Adjusts title in 'Monte seu Kit' section

--- a/index.html
+++ b/index.html
@@ -505,8 +505,9 @@
     </section>    <!-- Seção Monte seu Kit Arraiá -->
     <section class="py-20 bg-gradient-to-br from-yellow-50 via-orange-50 to-yellow-50" id="monte-seu-kit">
         <div class="container mx-auto px-6 md:px-4">            <div class="text-center mb-16 px-4 md:px-0">
-                <h2 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">
-                    Monte seu <span class="text-transparent bg-clip-text bg-gradient-to-r from-junino-red to-junino-orange">Kit Arraiá</span>
+                <h2 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4 leading-tight">
+                    Monte seu<br>
+                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-junino-red to-junino-orange">Kit Arraiá</span>
                 </h2>
                 <p class="text-xl text-gray-600 max-w-3xl mx-auto">
                     Selecione os produtos e as quantidades que desejar e solicite um orçamento completo com um clique!
