--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                         <img src="assets/images/CANECA.png" alt="Canecas Personalizadas" class="w-full h-40 object-cover rounded-2xl">
                                     </div>
                                     <h3 class="text-xl font-bold text-gray-800 text-center mb-2">Canecas Personalizadas</h3>
-                                    <p class="text-sm text-gray-600 text-center mb-4 flex-grow">Cerâmica premium com sublimação</p>
+                                    <p class="text-sm text-gray-600 text-center mb-4 flex-grow">Cerâmica, plásticas e térmicas</p>
                                     <div class="flex justify-center space-x-2 mb-6">
                                         <span class="w-3 h-3 bg-junino-yellow rounded-full"></span>
                                         <span class="w-3 h-3 bg-junino-orange rounded-full"></span>
