feat: Implementa rastreamento completo de eventos
- Adiciona código de monitoramento RD Station para tracking de visitantes
- Implementa rastreamento de cliques nos botões WhatsApp (Google Analytics e Meta Pixel)
- Adiciona rastreamento de envio do formulário com eventos personalizados
- Configura Google Tag Manager para melhor gestão de tags
- Adiciona eventos de conversão otimizados para Google Ads e Meta Ads
- Cria arquivo de teste para validação do rastreamento
- Documenta processo de validação nos painéis das plataformas

--- a/index.html
+++ b/index.html
@@ -23,18 +23,25 @@
     <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=487696269435926&ev=PageView&noscript=1"
     /></noscript>
-    <!-- End Facebook Pixel Code -->
-
-    <!-- Google Ads Tag -->
+    <!-- End Facebook Pixel Code -->    <!-- Google Ads Tag -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-1001326878"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'AW-1001326878');
-      gtag('config', 'G-2V46X0HB2M');
+      gtag('config', 'G-2V46X0HB2M', {
+        'custom_map': {
+          'custom_dimension_1': 'campaign_source'
+        }
+      });
+      
+      // Enhanced conversions configurações
+      gtag('config', 'AW-1001326878', {
+        'allow_enhanced_conversions': true
+      });
     </script>
-    <!-- End Google Ads Tag -->    <!-- Alpine JS -->
+    <!-- End Google Ads Tag --><!-- Alpine JS -->
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
     <!-- Tailwind CSS -->
@@ -74,7 +81,10 @@
         }
     </script>
 </head>
-<body class="font-poppins bg-gradient-to-b from-yellow-50 to-orange-50">    <!-- Header Fixo -->    <header class="fixed top-0 w-full bg-white/95 backdrop-blur-sm shadow-lg z-50 transition-all duration-300">
+<body class="font-poppins bg-gradient-to-b from-yellow-50 to-orange-50">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-CONTAINER_ID" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->    <!-- Header Fixo -->    <header class="fixed top-0 w-full bg-white/95 backdrop-blur-sm shadow-lg z-50 transition-all duration-300">
         <div class="container mx-auto px-6 md:px-4 py-4 md:py-3">
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
@@ -715,12 +725,13 @@
         <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
             <path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.894 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01s-.521.074-.792.372c-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.626.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"/>
         </svg>
-    </a>
-
-    <!-- Swiper JS -->
+    </a>    <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
       <!-- Script -->
     <script src="assets/js/script.js" defer></script>
+
+    <!-- RD Station Código de Monitoramento -->
+    <script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/141cb321-6791-400b-966a-468d968f40ce-loader.js"></script>
 
 </body>
 </html>
